<resources>
    <string name="API_UpdateKhachHangDaGhi">http://tiwaco.com.vn:8012/Service1.svc/CapNhatChiSoTLK</string>
    <string name="API_UpdateKhachHangDaGhi2">http://113.176.94.250:8012/Service1.svc/CapNhatChiSoDongHoNuocNongThon</string>
    <string name="API_GetListTiwareadData">http://113.176.94.250:8012/Service1.svc/GetListTiwareadDataNongThon</string>
    <string name="API_GetListTiwareadDataDaGhi">http://113.176.94.250:8012/Service1.svc/GetListTiwareadDataDaGhiNongThon</string>
    <string name="API_GetListTiwareadDataThu">http://113.176.94.250:8012/Service1.svc/GetListTiwareadDataThuTatCaNongThon</string>
    <string name="API_CheckLogin">http://113.176.94.250:8012/Service1.svc/GetThongTinNhanVien</string>
    <string name="API_DuongKhoaSo">http://113.176.94.250:8012/Service1.svc/DanhSachDuongChuaKhoaSo</string>
    <string name="API_DoiMatKhau">http://113.176.94.250:8012/Service1.svc/UpdatePassUser</string>
    <string name="API_CapNhat">http://113.176.94.250:8012/Service1.svc/GetThongTinCapNhat</string>
    <string name="API_CapNhatVaSuDung">http://113.176.94.250:8012/Service1.svc/GetThongTinCapNhatVaChoPhepSuDung</string>
    <string name="API_GetNhanVien">http://113.176.94.250:8012/Service1.svc/GetNhanVien</string>
    <string name="API_UpdateThuTienNuoc">https://thanhtoannb.tiwaco.com.vn:49404/PayTamThu</string>
    <string name="API_PayBillNB">https://thanhtoannb.tiwaco.com.vn:49404/PayAllThuNoiBo</string>
    <string name="API_LayHoaDonTheoMaKH">https://thanhtoannb.tiwaco.com.vn:49404/LayHoaDonTheoDanhSachHD</string>
    <string name="API_GetBillInfoNB">https://thanhtoannb.tiwaco.com.vn:49404/GetBill_InfoNB</string>
    <string name="API_UpDatePhoneAndNote">https://thanhtoannb.tiwaco.com.vn:49404/UpDatePhoneAndNote</string>
    <string name="BASEURL">https://thanhtoannb.tiwaco.com.vn:49404</string>
    <string name="link_apk">http://tiwaco.com.vn/uploads/apk/tiwaread.apk</string>
    <string name="manhinh_Login">Đăng nhập</string>
    <string name="manhinh_Main">Ghi nước</string>
    <string name="app_name">TIWAREAD</string>
    <string name="data_file_name">customers.txt</string>
    <string name="data_file_name_thu">customersthu.txt</string>
    <string name="THONGBAO_DUONGDAGHIXONG">Các đường đã ghi xong</string>
    <string name="THONGBAO_DUONGCHUAGHI_ERROR">Không tìm được danh sách đường</string>
    <string name="THONGBAO_DUONGCHUAGHI_SUCCESS">Tìm được danh sách đường</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_ID">ID nhân viên</string>
    <string name="prompt_password">Mật khẩu</string>
    <string name="prompt_password_moi">Mật khẩu mới</string>
    <string name="prompt_password_cu">Mật khẩu cũ</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_close">Thoát</string>
    <string name="action_update">Kiểm tra cập nhật</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">Tên hoặc mật khẩu không đúng.Hãy thử lại</string>
    <string name="error_field_required">Bạn chưa nhập thông tin</string>
    <string name="error_load">Quá trình load dữ liệu thất bại. Chọn OK để load lại. Chọn Thoát để kết thúc.</string>
    <string name="error_backup">Quá trình backup dữ liệu thất bại.</string>
    <string name="error_load_file">Quá trình load dữ liệu thất bại do không tồn tại file dữ liệu.</string>
    <string name="error_load_server">Chưa kết nối được đến server.Hãy thử lại.</string>
    <string name="delete_file_load_file">Load dữ liệu có thể làm mất dữ liệu cũ. Bạn có muốn load dữ liệu không?</string>
    <string name="backup_listrong_daghi">Chưa có khách hàng nào được ghi.Hãy tiến hành ghi nước.</string>
    <string name="backup_listrong_chuaghinuoc">Toàn bộ khách hàng đã được ghi nước </string>
    <string name="backup_listrong_tatca">Không tồn tại dữ liệu khách hàng.</string>
    <string name="backup_thanhcong">Lưu dữ liệu thành công.</string>
    <string name="backup_thatbai">Lưu dữ liệu thất bại.</string>
    <string name="backup_dialog_moinhat">Bạn đã lưu dữ liệu mới nhất</string>
    <string name="list_chuyendulieu_hoighinuoc1">Bạn có muốn ghi nước đường: </string>
    <string name="list_chuyendulieu_hoighinuoc_khachhang">Bạn có muốn ghi nước khách hàng: </string>
    <string name="list_chuyendulieu_hoighinuoc_capnhatkhachhang">Bạn có muốn cập nhật lại thông tin ghi nước của khách hàng: </string>
    <string name="list_chuyendulieu_hoithunuoc1">Bạn có muốn thu tiền nước đường: </string>
    <string name="list_chuyendulieu_hoithunuoc_khachhang">Bạn có muốn thu tiền nước khách hàng: </string>
    <string name="list_chuyendulieu_hoithunuoc_capnhatkhachhang">Bạn có muốn cập nhật lại thông tin thu tiền nước của khách hàng: </string>
    <string name="list_chuyendulieu_hoighinuoc2"> không? </string>
    <string name="main_chuacothongtinduong"> Chưa chọn đường để ghi nước. Bạn có muốn chọn đường để ghi nước không? </string>
    <string name="main_chuacothongtinduongdethu"> Chưa chọn đường để thu tiền nước. Bạn có muốn chọn đường để thu tiền nước không? </string>
    <string name="main_capnhatsdt_thanhcong">Cập nhật SĐT thành công</string>
    <string name="main_capnhatsdt_thatbai">Cập nhật SĐT thất bại</string>
    <string name="main_capnhatcmnd_thanhcong">Cập nhật CMND thành công</string>
    <string name="main_capnhatcmnd_thatbai">Cập nhật CMND thất bại</string>
    <string name="main_capnhatloaikh_thanhcong">Chuyển loại KH thành công</string>
    <string name="main_capnhatloaikh_thatbai">Chuyển loại KH thất bại</string>
    <string name="main_capnhatghichu_thanhcong">Cập nhật ghi chú thành công</string>
    <string name="main_capnhatghichu_thatbai">Cập nhật ghi chú thất bại</string>
    <string name="main_ghinuoc_duongdaghixong">Đường này đã được ghi nước xong.</string>
    <string name="main_ghinuoc_duongdaghixongtatca">Tất cả các đường đã được ghi nước xong.</string>
    <string name="main_thunuoc_duongdathuxong">Đường này đã được thu tiền nước xong.</string>
    <string name="main_thunuoc_duongdathuxongtatca">Tất cả các đường đã được thu tiền nước xong.</string>
    <string name="main_thongbao_soam">Chỉ số nước không thể là số âm</string>
    <string name="main_thongbao_m3sai">m3 phải là số nguyên</string>
    <string name="main_thongbao_batthuong">Chỉ số nước bất thường. Bạn có muốn tiếp tục sử dụng chỉ số này không?</string>
    <string name="main_thongbao_csmoinhohoncscu">Chỉ số nước mới không thể nhỏ hơn chỉ số cũ</string>
    <string name="btn_backup">Lưu</string>
    <string name="btn_ghinuoc">Ghi nước</string>
    <string name="btn_doisodt">Đổi</string>
    <string name="btn_timkiem">Tìm kiếm</string>
    <string name="btn_lichsu">Thông tin</string>
    <string name="btn_doimatkhau">Đổi mật khẩu</string>
    <string name="tab_ghinuoc">Ghi nước</string>
    <string name="tab_thunuoc">Thu tiền nước</string>
    <string name="tab_dsKH">Danh sách ghi</string>
    <string name="tab_dsKHThu">Danh sách thu</string>
    <string name="tab_dsduong">Danh sách đường</string>
    <string name="list_khayloc">Khay lọc theo tiêu chí </string>
    <string name="KH_hoten">Họ và tên: </string>
    <string name="KH_diachi">Địa chỉ: </string>
    <string name="KH_dienthoai">Điện thoại: </string>
    <string name="KH_dienthoaiphu">Điện thoại phụ: </string>
    <string name="KH_chisocu">Chỉ số/m3 cũ ĐH chính: </string>
    <string name="KH_chisocucon">Chỉ số/m3 cũ ĐH con: </string>
    <string name="KH_m3cu">m3 cũ: </string>
    <string name="KH_chisomoi_label">Chỉ số/m3 mới ĐH chính: </string>
    <string name="KH_chisomoicon_label">Chỉ số/m3 mới ĐH con: </string>
    <string name="KH_chisobatthuong">BẤT THƯỜNG </string>
    <string name="KH_chisomoi">Chỉ số: </string>
    <string name="KH_m3moi">m3: </string>
    <string name="KH_chisomoicon">Chỉ số: </string>
    <string name="KH_m3moicon">m3: </string>
    <string name="KH_ghichu">Ghi chú: </string>
    <string name="KH_STT">STT: </string>
    <string name="KH_tinhtrangdongho">Tình trạng: </string>
    <string name="KH_hieuTLK">Hiệu: </string>
    <string name="KH_coTLK">Cỡ: </string>
    <string name="KH_maTLK">Mã: </string>
    <string name="KH_danhbo">DBộ: </string>
    <string name="KH_loaiKH">Loại KH: </string>
    <string name="KH_DuongDangGhi">Đường: </string>
    <string name="ThongTinKH">Thông tin khách hàng: </string>
    <string name="ThongTinTenFile">Tên file </string>
    <string name="ThongTinLuuFie">Thông tin lưu </string>
    <string name="ThongTinLuuFie_Tatca">Tất cả </string>
    <string name="ThongTinLuuFie_Daghi">Đã ghi </string>
    <string name="ThongTinLuuFie_Chuaghi">Chưa ghi </string>
    <string name="ThongTinLuuFie_Lưu">Lưu File</string>
    <string name="ThongTinLuuFie_CapNhat">Lưu server</string>
    <string name="ThongTinLuuFie_Trove">Trở về</string>
    <string name="ThongTinDH">Thông tin TLK </string>
    <string name="ThongTinGN">Thông tin ghi nước </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ghi_nuoc">Ghi nước </string>
    <string name="ghi_thu">Ghi/Thu </string>
    <string name="DSKH">Danh sách</string>
    <string name="nhap_du_lieu">Nhập</string>
    <string name="load_status">Đang xử lý...</string>
    <string name="btn_next">TỚI</string>
    <string name="btn_pre">LÙI</string>
    <string name="string_duong">đường</string>
    <string name="string_con">Còn lại:</string>
    <string name="start_chuacoduongdeghinuoc">Bạn chưa ghi nước đường nào.Bạn có muốn chọn đường để ghi nước không?</string>
    <string name="start_chuacoduongdethunuoc">Bạn chưa thu tiền nước đường nào.Bạn có muốn chọn đường để ghi nước không?</string>
    <string name="search_label">Tìm kiếm</string>
    <string name="search_label_chitieu">Chỉ tiêu tìm kiếm</string>
    <string name="search_label_khongtimthay">Không tìm được kết quả nào</string>
    <string name="btn_kieughi">Kiểu ghi</string>
    <string name="btn_daghi">Đã ghi/Chưa ghi</string>
    <string name="backup_luuy"><![CDATA[*Lưu ý: Nhập kỳ hóa đơn theo format 6 ký tự: <nam><thang>. Ví dụ: 201711]]></string>
    <string name="backup_capnhatserver_thanhcong">Cập nhật dữ liệu thành công</string>
    <string name="backup_capnhatserver_thatbai">Cập nhật dữ liệu thất bại</string>
    <string name="loadserver_error_kocokh">Chưa có dữ liệu trong kỳ hóa đơn này.</string>
    <string name="DialogDangNhap">Đang đăng nhập...</string>
    <string name="nhan_vien">Nhân viên: </string>
    <string name="note_phienbanmoinhat_true">Đây là phiên bản mới nhất.</string>
    <string name="thanhtoan_txtthanhtoan">Thanh toán và in biên nhận</string>
    <string name="thanhtoan_txtthanhtoan_theoky">Thanh toán và in biên nhận theo kỳ</string>
    <string name="ThongTinLuuFie_DaThu">Đã thu</string>
</resources>