<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    Trong mỗi item có
    id: để truy xuất kết nối code java
    icon: icon của menu
    showAsAction: trạng thái cho phép hiển thị trên actionbar không
    title: tiêu để dạng text


    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/btn_timkiem"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/btn_backup"
        app:showAsAction="collapseActionView"/>
           -
    <item
        android:id="@+id/action_kieughi"
        android:icon="@android:drawable/ic_media_ff"
        android:title="@string/btn_kieughi"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_daghi"
        android:icon="@android:drawable/presence_invisible"
        android:title="@string/btn_daghi"
        app:showAsAction="ifRoom"/>

</menu>